--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -9,3 +9,6 @@ spring.datasource.sql-script-encoding=UTF-8
 
 #mes configurations
 mes-config.limitProduits = 6
+
+#eureka-server
+eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
