--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -11,4 +11,4 @@ spring.datasource.sql-script-encoding=UTF-8
 mes-config.limitProduits = 6
 
 #eureka-server
-eureka.client.serviceUrl.defaultZone:http://localhost:9102
+eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
