--- a/microservice-produits.properties
+++ b/microservice-produits.properties
@@ -1,5 +1,7 @@
 server.port 9001
 
+spring.application.name=microservice-produits
+
 #Configurations H2
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
