--- a/clientui.properties
+++ b/clientui.properties
@@ -1,4 +1,4 @@
-spring.application.name=microservice-produits
+spring.application.name=clientui
 
 #eureka-server
 eureka.client.serviceUrl.defaultZone:http://localhost:9102/eureka/
